--- a/my-react-app/package.json
+++ b/my-react-app/package.json
@@ -3,12 +3,12 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "lint": "eslint .",
-    "preview": "vite preview"
-  },
+"scripts": {
+  "dev": "vite",
+  "build": "vite build",
+  "lint": "eslint .",
+  "preview": "vite preview --host 0.0.0.0 --port $PORT"
+},
   "dependencies": {
     "framer-motion": "^12.23.12",
     "gsap": "^3.13.0",
