--- a/my-react-app/package.json
+++ b/my-react-app/package.json
@@ -3,15 +3,16 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-"scripts": {
-  "dev": "vite",
-  "build": "vite build",
-  "lint": "eslint .",
-  "preview": "vite preview --host 0.0.0.0 --port $PORT"
-},
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "lint": "eslint .",
+    "preview": "vite preview --host 0.0.0.0 --port $PORT"
+  },
   "dependencies": {
     "framer-motion": "^12.23.12",
     "gsap": "^3.13.0",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.536.0",
     "ogl": "^1.0.11",
     "react": "^19.1.0",
@@ -34,4 +35,3 @@
     "tailwindcss": "^4.1.11"
   }
 }
-  
