--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,2 @@
 SECRET_KEY=G6Y8hmK4r2P_DnfMytVuZoCJ2xZLdHfR3NQqjXkYaHw
+DATABASE_URL=postgresql+asyncpg://myproject_db_cpgb_user:7icNvaKO4EbbnuR9tAks59VoHF2xXrhw@dpg-d20r4ire5dus7384t1f0-a.oregon-postgres.render.com/myproject_db_cpgb
