--- a/my-react-app/package.json
+++ b/my-react-app/package.json
@@ -10,6 +10,12 @@
     "preview": "vite preview --host 0.0.0.0 --port $PORT"
   },
   "dependencies": {
+    "@tiptap/extension-link": "^3.1.0",
+    "@tiptap/extension-placeholder": "^3.1.0",
+    "@tiptap/extension-text-align": "^3.1.0",
+    "@tiptap/pm": "^3.1.0",
+    "@tiptap/react": "^3.1.0",
+    "@tiptap/starter-kit": "^3.1.0",
     "framer-motion": "^12.23.12",
     "gsap": "^3.13.0",
     "jwt-decode": "^4.0.0",
