--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,5 @@
 SECRET_KEY=G6Y8hmK4r2P_DnfMytVuZoCJ2xZLdHfR3NQqjXkYaHw
 DATABASE_URL=postgresql+asyncpg://myproject_db_cpgb_user:7icNvaKO4EbbnuR9tAks59VoHF2xXrhw@dpg-d20r4ire5dus7384t1f0-a.oregon-postgres.render.com/myproject_db_cpgb
+ACCESS_TOKEN_EXPIRE_MINUTES=60
+REFRESH_TOKEN_EXPIRE_DAYS=7
+AUTHJWT_SECRET_KEY=G6Y8hmK4r2P_DnfMytVuZoCJ2xZLdHfR3NQqjXkYaHw
