--- a/my-react-app/package.json
+++ b/my-react-app/package.json
@@ -7,7 +7,9 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview --host 0.0.0.0 --port $PORT"
+    "preview": "vite preview --host 0.0.0.0 --port $PORT",
+    "updates": "node generateUpdates.js",
+    "prepare": "husky"
   },
   "dependencies": {
     "@tiptap/extension-link": "^3.1.0",
@@ -16,6 +18,7 @@
     "@tiptap/pm": "^3.1.0",
     "@tiptap/react": "^3.1.0",
     "@tiptap/starter-kit": "^3.1.0",
+    "dayjs": "^1.11.13",
     "framer-motion": "^12.23.12",
     "gsap": "^3.13.0",
     "jwt-decode": "^4.0.0",
@@ -25,6 +28,7 @@
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.8.0",
     "react-toastify": "^11.0.5",
+    "simple-git": "^3.28.0",
     "vite": "^7.0.4"
   },
   "devDependencies": {
@@ -38,6 +42,7 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.3.0",
+    "husky": "^9.1.7",
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.11"
   }
