--- a/my-react-app/package.json
+++ b/my-react-app/package.json
@@ -9,7 +9,7 @@
     "lint": "eslint .",
     "preview": "vite preview --host 0.0.0.0 --port $PORT",
     "updates": "node generateUpdates.js",
-    "prepare": "husky"
+    "prepare": "husky install"
   },
   "dependencies": {
     "@tiptap/extension-link": "^3.1.0",
