--- a/my-react-app/package.json
+++ b/my-react-app/package.json
@@ -8,7 +8,7 @@
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview --host 0.0.0.0 --port $PORT",
-    "updates": "node generateUpdates.js",
+    "updates": "node generateUpdates.cjs",
     "prepare": "husky"
   },
   "dependencies": {
